--- a/templates/ajax/admin/widget/controls.twig
+++ b/templates/ajax/admin/widget/controls.twig
@@ -15,7 +15,7 @@
                     {% endfor %}
                 </select>
             </div>
-            <div class="padded cell grow-0 shrink-0 hide-md hide-sm"><label for="{{ _self.gen_id(prefix,'itemwidget','number')}}">X</label></div>
+            <div class="padded cell grow-0 shrink-0 hide-md hide-sm"><label for="{{ _self.gen_id(prefix,'itemwidget','number')}}">x</label></div>
             <div class="padded cell grow-2 shrink-2"> <input type="number" id="{{ _self.gen_id(prefix,'itemwidget','number')}}" value="1"/> </div>
         </div>
         <div class="row-flex">
