--- a/templates/ajax/public/maintenance_attack.html.twig
+++ b/templates/ajax/public/maintenance_attack.html.twig
@@ -23,7 +23,9 @@
             </p>
             <p><button x-ajax-href="{{ path('initial_landing') }}">{{ button_texts[0] }}</button></p>
             <p><button x-ajax-href="{{ path('initial_landing') }}">{{ button_texts[1] }}</button></p>
+            {% if app.user %}
             <p><a href="{{ path('home_pm') }}" target="_self"><button>{{ 'Funkgerät verwenden'|trans({}, 'game') }}</button></p></a>
+            {% endif %}
         </div>
 
         <div class="infos">
