--- a/templates/ajax/soul/distinctions.html.twig
+++ b/templates/ajax/soul/distinctions.html.twig
@@ -37,7 +37,7 @@
                                 </div>
                             </div>
                             <div class="tooltip forum-tooltip">
-                                <h1>{{ picto.label|trans({}, 'game') }}</h1>
+                                <h1>{{ picto.label|trans({}, 'game') }} ({{ picto.c }})</h1>
                                 <em>{{ picto.description|trans({}, 'game')}}</em>
                             </div>
                         </div>
