Fix ruin dig in town dashboard

--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -886,7 +886,7 @@
                             });
 
                         document.getElementById("zone_digs").value = data.zone_digs;
-                        document.getElementById("ruin_digs").value = data.zone_digs;
+                        document.getElementById("ruin_digs").value = data.ruin_digs;
                     });
                 });
             }
