Replace gif animated header with webp

--- a/assets/less/modules/events.less
+++ b/assets/less/modules/events.less
@@ -65,7 +65,7 @@ body.arma {
 }
 
 body.christmas {
-  #wrapper>#header { background: url(../../img/background/header_xmas_de.gif); }
+  #wrapper>#header { background: url(../../img/background/header_xmas_de.webp); }
 }
 
 body.stpatrick {
