--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -6,9 +6,9 @@ html.lang-base-en body.arma #wrapper > #header { background-image: url('../img/b
 html.lang-base-fr body.arma #wrapper > #header { background-image: url('../img/background/header_arma_animated_fr.gif'); }
 html.lang-base-es body.arma #wrapper > #header { background-image: url('../img/background/header_arma_animated_es.gif'); }
 
-html.lang-base-en body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_en.gif'); }
-html.lang-base-fr body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_fr.gif'); }
-html.lang-base-es body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_es.gif'); }
+html.lang-base-en body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_en.webp'); }
+html.lang-base-fr body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_fr.webp'); }
+html.lang-base-es body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_es.webp'); }
 
 html.lang-base-en body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_en.png'); }
 html.lang-base-fr body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_fr.png'); }
