--- a/assets/less/modules/events.less
+++ b/assets/less/modules/events.less
@@ -36,14 +36,14 @@ body.arma {
             visibility: hidden;
             line-height: 0;
             &.author {
-                &:before {
+                &:after {
                     content: "ERROR";
                     visibility: visible;
                     line-height: initial;
                 }
             }
             &.nbPost {
-                &:before {
+                &:after {
                     content: "666";
                     visibility: visible;
                     line-height: initial;
@@ -62,6 +62,12 @@ body.arma {
     .citizens-list .avatar.ua-7 { background: url(../../img/anims/doomed8.gif)  !important; }
     .citizens-list .avatar.ua-8 { background: url(../../img/anims/doomed9.gif)  !important; }
     .citizens-list .avatar.ua-9 { background: url(../../img/anims/doomed10.gif) !important; }
+}
+
+footer.arma {
+  .cell-small.footer > div, .cell.footer > div {
+    background: rgba(0, 0, 0, 0.88);
+  }
 }
 
 body.christmas {
