--- a/templates/ajax/game/town/well.html.twig
+++ b/templates/ajax/game/town/well.html.twig
@@ -114,7 +114,7 @@
                 if (this.getAttribute('x-well-confirm') === '1') {
                     {% if not allow_take %}
                         if (this.getAttribute('x-well-direction') === 'up') {
-                            $.html.error('{{ 'Du kannst nicht <strong>mehr als 2 Rationen Wasser pro Tag</strong> entnehmen.'|trans({},'game')|e('js') }}');
+                            $.html.error('{{ 'Du kannst nicht <strong>mehr als {max} Rationen Wasser pro Tag</strong> entnehmen.'|trans({'{max}': maximum},'game')|e('js') }}');
                             return;
                         }
                     {% else %}
