--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -923,3 +923,7 @@ ul.subscriptions {
   outline: 2px solid #5c2b20 !important;
   margin-bottom: 10px;
 }
+
+.thread-tag {
+  padding: 0 4px; border-radius: 4px; margin: 0 4px; font-size: 0.95rem; font-weight: bold; box-shadow: 0 0 3px rgba(0,0,0,0.3);
+}
