--- a/assets/less/modules/log.less
+++ b/assets/less/modules/log.less
@@ -60,6 +60,7 @@
             display: inline-block;
             overflow: hidden;
             text-overflow: ellipsis;
+            vertical-align: text-top;
           } 
         }
         &.log-part-entry-hidden {
