--- a/templates/scripts/errors/generic.txt.twig
+++ b/templates/scripts/errors/generic.txt.twig
@@ -1,4 +1,6 @@
 'com'                                                              : '{{'Kommunikationsfehler.'|trans({},'global')|e('js')}}',
+'script'                                                           : '{{'Ein Script auf dieser Seite ist abgestürzt; weitere Informationen wurden an die Web-Konsole übermittelt. Die Seite funktioniert möglicherweise nicht mehr korrekt. Bitte melde diesen Fehler:'|trans({},'global')|e('js')}}',
+'common'                                                           : '{{'Ein Fehler ist aufgetreten. Es stehen keine weiteren Informationen zur Verfügung.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorInvalidRequest') }}   : '{{'Die Aktion kann nicht ausgeführt werden, da deine Anfrage unvollständig oder fehlerhaft ist.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorDatabaseException') }}: '{{'Beim Ausführen der Aktion ist ein Datenbankfehler aufgetreten. Bitte versuche es später erneut.'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorInternalError') }}    : '{{'Beim Ausführen der Aktion ist ein interner Fehler aufgetreten. Bitte versuche es später erneut.'|trans({},'global')|e('js')}}',
