--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -64,7 +64,7 @@
 
   span.quoteauthor, div.cref {
     &.quoteauthor { margin-left: 30px; }
-    &.cref { cursor: pointer }
+    &.cref, &.quoteauthor[x-id] { cursor: pointer }
     display: inline-block;
     font-weight: bold;
     font-size: 1.25rem; 
