--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1622,7 +1622,7 @@ i.dagger {
   &.new-messages {
     >*:nth-child(1) { display: none; }
   }
-  &:not(.new-messages)>*:not(:nth-child(1)) { display: none; }
+  &:not(.new-messages)>*:not(:nth-child(1)) { display: none !important; }
 }
 
 .mt-1 {
